--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <input  class='button big-btn' type='file' />
     <div id="divheight">
         Original<img id="myImg" src="#" alt="">
-        R<canvas id='redImg' src="#" alt=""></canvas>
-        G<canvas id='greenImg' src="#" alt=""></canvas>
-        B<canvas id='blueImg' src="#" alt=""></canvas>
-        Gray<canvas id='grayImg' src="#" alt=""></canvas>
-        Negative<canvas id='negImg' src="#" alt=""></canvas>
+        <canvas id='redImg' src="#" alt=""></canvas>
+        <canvas id='greenImg' src="#" alt=""></canvas>
+        <canvas id='blueImg' src="#" alt=""></canvas>
+        <canvas id='grayImg' src="#" alt=""></canvas>
+        <canvas id='negImg' src="#" alt=""></canvas>
     </div>
     <br>
     RGB Data<svg id='theBox'></svg>
