--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input id="setScale"  class='button medium-btn' type="button" value="Modify Image Scale" onclick="setSize();"/><h1 id="scaleSize" style='color:white'>Current Scale: 1px == 1px</h1>
     <input  class='button big-btn' type='file' />
     <div id="divheight">
-        Original<img id="myImg" src="#" alt="">
+        O.I.<img id="myImg" src="#" alt="">
         <canvas id='redImg' src="#" alt=""></canvas>
         <canvas id='greenImg' src="#" alt=""></canvas>
         <canvas id='blueImg' src="#" alt=""></canvas>
