--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
 </head>
 <body>
-    <h1 style='color:white'>Upload your image. </h1>
+    <h1 style='color:white'>Pixel Junkie</h1>
+    <h2 style='color:white'>Upload your image. </h2>
     <p style='color:white'>Larger images take considerably longer</p>
     <input id="clickMe" class='button medium-btn' type="button" value="Destroy the pixels" onclick="removeFunction();"/>
     <input id="setScale"  class='button medium-btn' type="button" value="Modify Image Scale" onclick="setSize();"/><h1 id="scaleSize" style='color:white'>Current Scale: 1px == 1px</h1>
