--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script charset="utf-8"></script>
     <script src="JS/imageLoad.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div style="float: left;">
-        <h1 style='color:white'>
+        <h1 style='color:white; font-size: 4em;'>
             Pixel Junkie
         </h1>
         <h2 style='color:white'>Upload your image. </h2>
