--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div style="float: left;">
-        <h1 style='color:white; font-size: 4em;'>
+    <div style="float: left; width: 100%;">
+        <h1 style='color:white; font-size: 4em; width: 100%;
+        background-color: dimgray;
+        padding-left: 10px;'>
             Pixel Junkie
         </h1>
         <h2 style='color:white'>Upload your image. </h2>
         <p style='color:white'>Larger images take considerably longer</p>
         <input  class='button big-btn' type='file' /><br>
         <input id="clickMe" class='button medium-btn' type="button" value="Destroy the pixels" onclick="removeFunction();"/>
-        <input id="setScale"  class='button medium-btn' type="button" value="Modify Image Scale" onclick="setSize();"/><h1 id="scaleSize" style='color:white'>Current Scale: 1px == 1px</h1>
+        <input id="setScale"  class='button medium-btn' type="button" value="Modify Image Scale" onclick="setSize();"/>
+        <input id="saveCanvas"  class='button medium-btn' type="button" value="Save Scaled Image" onclick="saveCanvasImg();"/>
+        <h1 id="scaleSize" style='color:white'>Current Scale: 1px == 1px</h1>
         <div>
             <svg style='height: 440px; width: 440px; background-color: rgb(51, 51, 51); transform:rotate(180deg);' id='zoomBox'></svg>
             <svg style='height: 1px;' id='theBox'></svg>
@@ -33,7 +37,9 @@
                 <br>
                 <canvas id='grayImg' src="#" alt=""></canvas>
                 <canvas id='negImg' src="#" alt=""></canvas>
+                <div id="png-container"></div>
         </div>
     </div>
+
 </body>
 </html>
