--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
     <div style="float: left; width: 100%;">
-        <h1 style='color:white; font-size: 4em; width: 100%;
-        background-color: dimgray;
-        padding-left: 10px;'>
-            Pixel Junkie
-        </h1>
+        
+            <h1 id='titleLabel' style='color:white; font-size: 4em; width: 100%;
+            background-color: dimgray;
+            padding-left: 10px;'>
+                Pixel Junkie
+            </h1>
+            
         <h2 style='color:white'>Upload your image. </h2>
         <p style='color:white'>Larger images take considerably longer</p>
         <input  class='button big-btn' type='file' /><br>
@@ -37,7 +39,6 @@
                 <br>
                 <canvas id='grayImg' src="#" alt=""></canvas>
                 <canvas id='negImg' src="#" alt=""></canvas>
-                <div id="png-container"></div>
         </div>
     </div>
 
