--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <svg style='height: 440px; width: 440px; background-color: rgb(51, 51, 51); transform:rotate(180deg)' id='zoomBox'></svg>
             <svg style='height: 1px;' id='theBox'></svg>
         </div>
-        <div id="divheight">
+        <div class='containerBorder' id="divheight">
                 <br>
                 <img id="myImg" src="#" alt="">
                 <canvas id='redImg' src="#" alt="" onclick="swapFunctionR();"></canvas>
