--- a/index.html
+++ b/index.html
@@ -18,20 +18,24 @@
                 Pixel Junkie
             </h1>
             <h1 style='color:white'>Upload your image.   (Larger images take considerably longer) </h1>        
-        <span>
+        <div>
             <input  class='button big-btn' type='file' />
             <input id="clickMe" class='button medium-btn' type="button" value="Destroy The Pixels" onclick="removeFunction();"/>
             <input id="setScale"  class='button medium-btn' type="button" value="Modify Image Scale" onclick="setSize();"/>
             <input id="saveCanvas"  class='button medium-btn' type="button" value="Save Scaled Image" onclick="saveCanvasImg();"/>
-        </span>
+            <h2 id="pixelData" style='color:white; font-size: 2em; width: 100%;
+            background-color: dimgray;
+            padding-left: 10px; display: inline;'></h2>
+        </div>
         <span>
                 <h1 id="scaleSize" style='color:white; display: none;'>Current Scale: 1px == 1px</h1>
         </span>
         <div>
-            <svg style='height: 440px; width: 440px; background-color: rgb(51, 51, 51); transform:rotate(180deg)' id='zoomBox'></svg>
-            <svg style='height: 1px;' id='theBox'></svg>
+            <br>
+            <svg style='float:left; position:fixed; height: 440px; width: 440px; background-color: rgb(51, 51, 51); transform:rotate(180deg)' id='zoomBox'></svg>
+            <canvas id='coreImg' class='coreImg' style='position:relative;left: 440px'src="#" alt=""></canvas>
         </div>
-        <div class='containerBorder' id="divheight">
+        <div class='containerBorder' style ='position:relative; left: 440px'id="divheight">
                 <br>
                 <img id="myImg" src="#" alt="">
                 <canvas id='redImg' src="#" alt="" onclick="swapFunctionR();"></canvas>
