--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <h2 id="pixelData" style='color:white; font-size: 2em; width: 100%;
             background-color: dimgray;
             padding-left: 10px; display: inline;'></h2>
+            <svg id='colorRepresentation' style="height: 100px; width: 100px; background-color: rgb(51, 51, 51); display:inline" ></svg>
         </div>
         <span>
                 <h1 id="scaleSize" style='color:white; display: none;'>Current Scale: 1px == 1px</h1>
         </span>
         <div>
             <br>
-            <svg style='float:left; position:fixed; height: 440px; width: 440px; background-color: rgb(51, 51, 51); transform:rotate(180deg)' id='zoomBox'></svg>
+            <svg style='float:left; position:fixed; height: 440px; width: 440px; background-color: rgb(51, 51, 51); transform:rotate(180deg); z-index: 99' id='zoomBox'></svg>
             <canvas id='coreImg' class='coreImg' style='position:relative;left: 440px'src="#" alt=""></canvas>
         </div>
         <div class='containerBorder' style ='position:relative; left: 440px'id="divheight">
