--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
             padding-left: 10px;'>
                 Pixel Junkie
             </h1>
-            <h1 style='color:white;'>Your image upload == Easily obtain RGBA data, Split image into color channels / Grayscale / Negative, Image Up-scale.</h1>             <img style='float:left;height: 100; width: 200;z-index: 1; display: inline;'src="help.png">
-       
+            <h1 style='color:white;'>Pixels are back on the menu, boys.</h1>             
         <div>
             <input  class='button big-btn' type='file' />
             <input id="clickMe" class='button medium-btn' type="button" value="Destroy The Pixels" onclick="removeFunction();"/>
             <input id="setScale"  class='button medium-btn' type="button" value="Modify Image Scale" onclick="setSize();"/>
             <input id="saveCanvas"  class='button medium-btn' type="button" value="Save Scaled Image" onclick="saveCanvasImg();"/>
-            <svg id='colorRepresentation' style="height: 100px; width: 100px; background-color: rgb(51, 51, 51); display:inline" ></svg>
-            <h2 id="pixelData" style='color:white; font-size: 1.25em; width: 100%; background-color: dimgray; padding-left: 10px; display: inline;'></h2>
+            <svg id='colorRepresentation' style="height: 50px; width: 50px; background-color: rgb(51, 51, 51); display:inline" ></svg>
+            <h2 id="pixelData" style='color:white; font-size: 2em; width: 100%; background-color: dimgray; padding-left: 10px; display: inline;'></h2>
         </div>
         <span>
             <h1 id="scaleSize" style='color:white; display: none;'>Current Scale: 1px == 1px</h1>            <p id='rgbHeader' style='position:relative;left: 50px;font-family: VT323, monospace;font-size: 2em; display: inline;'></p>
