--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             padding-left: 10px;'>
                 Pixel Junkie
             </h1>
-            <input class='button medium-btn' type="button" value="Reading Material" onclick="window.location.href = '#open-modal';" style="display: inline;"/>
+            <input class='button medium-btn' type="button" value="Help Menu" onclick="window.location.href = '#open-modal';" style="display: inline;"/>
             <div id="open-modal" class="modal-window">
                 <div>
                     <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
